test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/compound_add_void_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  void
  *
  identifier(buff)
  =
  identifier(malloc)
  (
  const int(100)
  )
  ;
  identifier(buff)
  +=
  const int(3)
  ;
  return
  const int(0)
  ;
  }
